--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,8 +3,6 @@ on:
   - push
 jobs:
   terraform:
-    env:
-      TF_VER: 0.12.18
     name: 'Terraform'
     runs-on: ubuntu-latest
     steps:
@@ -13,14 +11,14 @@ jobs:
       - name: 'Terraform Format'
         uses: hashicorp/terraform-github-actions@master
         with:
-          tf_actions_version: $TF_VAR
+          tf_actions_version: 0.12.18
           tf_actions_subcommand: 'fmt'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}          
       - name: 'Terraform Init'
         uses: hashicorp/terraform-github-actions@master
         with:
-          tf_actions_version: $TF_VAR
+          tf_actions_version: 0.12.18
           tf_actions_subcommand: 'init'
           args: '-backend-config="organization=$ORG_NAME"'
         env:
@@ -29,14 +27,14 @@ jobs:
       - name: 'Terraform Validate'
         uses: hashicorp/terraform-github-actions@master
         with:
-          tf_actions_version: $TF_VAR
+          tf_actions_version: 0.12.18
           tf_actions_subcommand: 'validate'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Terraform Plan'
         uses: hashicorp/terraform-github-actions@master
         with:
-          tf_actions_version: $TF_VAR
+          tf_actions_version: 0.12.18
           tf_actions_subcommand: 'plan'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
