--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -5,20 +5,22 @@ jobs:
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
+    env:
+      TF_VER: 0.12.18
     steps:
       - name: 'Checkout'
         uses: actions/checkout@master
       - name: 'Terraform Format'
         uses: hashicorp/terraform-github-actions@master
         with:
-          tf_actions_version: 0.12.18
+          tf_actions_version: ${{ TF_VER }}
           tf_actions_subcommand: 'fmt'
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}          
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Terraform Init'
         uses: hashicorp/terraform-github-actions@master
         with:
-          tf_actions_version: 0.12.18
+          tf_actions_version: ${{ TF_VER }}
           tf_actions_subcommand: 'init'
           args: '-var=$ORG_NAME'
         env:
@@ -27,14 +29,14 @@ jobs:
       - name: 'Terraform Validate'
         uses: hashicorp/terraform-github-actions@master
         with:
-          tf_actions_version: 0.12.18
+          tf_actions_version: ${{ TF_VER }}
           tf_actions_subcommand: 'validate'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Terraform Plan'
         uses: hashicorp/terraform-github-actions@master
         with:
-          tf_actions_version: 0.12.18
+          tf_actions_version: ${{ TF_VER }}
           tf_actions_subcommand: 'plan'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
