--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,30 +13,28 @@ jobs:
       - name: 'Terraform Format'
         uses: hashicorp/terraform-github-actions@master
         with:
-          tf_actions_version: ${{ TF_VER }}
+          tf_actions_version: '$TF_VER'
           tf_actions_subcommand: 'fmt'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Terraform Init'
         uses: hashicorp/terraform-github-actions@master
         with:
-          tf_actions_version: ${{ TF_VER }}
+          tf_actions_version: '$TF_VER'
           tf_actions_subcommand: 'init'
-          args: '-var=$ORG_NAME'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          ORG_NAME: ${{ secrets.ORG_NAME }}
       - name: 'Terraform Validate'
         uses: hashicorp/terraform-github-actions@master
         with:
-          tf_actions_version: ${{ TF_VER }}
+          tf_actions_version: '$TF_VER'
           tf_actions_subcommand: 'validate'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Terraform Plan'
         uses: hashicorp/terraform-github-actions@master
         with:
-          tf_actions_version: ${{ TF_VER }}
+          tf_actions_version: '$TF_VER'
           tf_actions_subcommand: 'plan'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
