--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'fmt'
-          tf_actions_working_dir: '../terraform'
+          tf_actions_working_dir: '../../terraform'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Terraform Init'
@@ -21,7 +21,7 @@ jobs:
         with:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'init'
-          tf_actions_working_dir: '../terraform'
+          tf_actions_working_dir: '../../terraform'
           args: '-backend-config=terraform.tfvars'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -30,7 +30,7 @@ jobs:
         with:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'validate'
-          tf_actions_working_dir: '../terraform'
+          tf_actions_working_dir: '../../terraform'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Terraform Plan'
@@ -38,6 +38,6 @@ jobs:
         with:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'plan'
-          tf_actions_working_dir: '../terraform'
+          tf_actions_working_dir: '../../terraform'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
