--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,7 +22,7 @@ jobs:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'init'
           tf_actions_working_dir: 'terraform'
-          args: '-backend-config="organization=${{ secrets.ORG_NAME }}" -backend-config="workspace.name=${{ secrets.WORKSPACE_NAME }}"'
+          args: '-backend-config="organization=${{ secrets.ORG_NAME }}"'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Terraform Validate'
