--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,7 +22,8 @@ jobs:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'init'
           tf_actions_working_dir: 'terraform'
-          args: '-backend-config="organization=${{ secrets.ORG_NAME }}"'
+          tf_actions_comment: true
+          args: '-backend-config="token=${{ secrets.TF_API_TOKEN }}" -backend-config="organization=${{ secrets.ORG_NAME }}"'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Terraform Validate'
