--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,9 +22,8 @@ jobs:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'init'
           tf_actions_working_dir: 'terraform'
-          tf_actions_comment: true
-          args: '-backend-config="token=${{ secrets.TF_API_TOKEN }}" -backend-config="organization=${{ secrets.ORG_NAME }}"'
         env:
+          TF_WORKSPACE: ${{ secrets.WORKSPACE_NAME }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Terraform Validate'
         uses: hashicorp/terraform-github-actions@master
