--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,30 +14,24 @@ jobs:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'fmt'
           tf_actions_working_dir: 'terraform'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Terraform Init'
         uses: hashicorp/terraform-github-actions@master
         with:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'init'
           tf_actions_working_dir: 'terraform'
+          args: '-backend-config="organization=${{ secrets.ORG_NAME }}"'
         env:
           TF_WORKSPACE: ${{ secrets.WORKSPACE_NAME }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Terraform Validate'
         uses: hashicorp/terraform-github-actions@master
         with:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'validate'
           tf_actions_working_dir: 'terraform'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Terraform Plan'
         uses: hashicorp/terraform-github-actions@master
         with:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'plan'
           tf_actions_working_dir: 'terraform'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
