--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,5 +1,6 @@
 name: 'Terraform GitHub Actions'
 on:
+  - push
 jobs:
   terraform:
     name: 'Terraform'
@@ -13,12 +14,15 @@ jobs:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'fmt'
           tf_actions_working_dir: 'terraform'
+          tf_actions_comment: false
       - name: 'Terraform Init'
         uses: hashicorp/terraform-github-actions@master
         with:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'init'
+          tf_actions_cli_credentials_token: ${{ secrets.TF_CLOUD_CLI }}
           tf_actions_working_dir: 'terraform'
+          tf_actions_comment: false
           args: '-backend-config="organization=${{ secrets.ORG_NAME }}"'
         env:
           TF_WORKSPACE: ${{ secrets.WORKSPACE_NAME }}
@@ -28,9 +32,12 @@ jobs:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'validate'
           tf_actions_working_dir: 'terraform'
+          tf_actions_comment: false
       - name: 'Terraform Plan'
         uses: hashicorp/terraform-github-actions@master
         with:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'plan'
+          tf_actions_cli_credentials_token: ${{ secrets.TF_CLOUD_CLI }}
           tf_actions_working_dir: 'terraform'
+          tf_actions_comment: false
